force-app/main/default/objects/KGparent__c/KGparent__c.object-meta.xml
<CustomObject>
    <label>KGparent</label>
    <nameField>
        <label>Parent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KGparents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>