force-app/main/default/objects/KGparent__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bishkek</fullName>
            </value>
            <value>
                <fullName>Talas</fullName>
            </value>
            <value>
                <fullName>Naryn</fullName>
            </value>
            <value>
                <fullName>Yssyk-kol</fullName>
            </value>
            <value>
                <fullName>Zhalalabat</fullName>
            </value>
            <value>
                <fullName>Osh</fullName>
            </value>
            <value>
                <fullName>Batken</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>